gym-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-app
  namespace: gym
  labels:
    app: gym
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: web
  template:
    metadata:
      labels:
        app: gym
        tier: web
    spec:
      volumes:
      - name: vault-token
        emptyDir:
          sizeLimit: 1Mi
      containers:
      - name: gym
        image: "pi4apps:5000/gym:2.0.3"
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: vault-token
            mountPath: "/var/tmp/vault"
        resources:
          limits:
            memory: "384Mi"
            cpu: "1000m" # 1 CPU
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8444
          timeoutSeconds: 60
        #          initialDelaySeconds: 60
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8444
          timeoutSeconds: 3
          initialDelaySeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: gym-service
  namespace: gym
spec:
  selector:
    app: gym
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8444
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gym.cloud.lavacro.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: gym-service
            port:
              number: 80
